--- a/app/views/institutions/edit.html.erb
+++ b/app/views/institutions/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing institution</h1>
+<!-- institution edit page -->
+  
 
-<%= render 'form' %>
+  <%= render 'form', what: "Edit" %>
+  
+  
 
-<%= link_to 'Show', @institution %> |
-<%= link_to 'Back', institutions_path %>
+
