--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,6 +10,9 @@ body {
 .block {
   display: block; }
 
+.display-hide {
+  display: none; }
+
 .form-last {
   margin-bottom: 0; }
 
@@ -46,8 +49,8 @@ body {
   height: 100%; }
 
 .main .left-nav {
-  padding-right: 0;
-  padding-top: 1rem; }
+  padding-top: 1rem;
+  padding-right: 0; }
   .main .left-nav li.active a, .main .left-nav li.active a:hover, .main .left-nav li.active a:focus {
     background-color: #004156; }
   .main .left-nav a {
@@ -55,13 +58,6 @@ body {
   .main .left-nav hr {
     margin-top: 1rem;
     margin-bottom: 1rem; }
-.main .v-line {
-  position: absolute;
-  left: -10px;
-  z-index: -1;
-  height: 100%;
-  bottom: 70px;
-  border-right: 1px solid #dddddd; }
 .main .main-content {
   padding-top: 2rem; }
   .main .main-content h3 {
@@ -73,10 +69,6 @@ body {
     margin-top: 0; }
   .main .main-content .row-right {
     margin-right: 0; }
-  .main .main-content .mt-15 {
-    margin-top: 15px; }
-  .main .main-content .mr-10 {
-    margin-right: 10px; }
   .main .main-content .form-heading {
     margin-top: 0;
     margin-bottom: 15px; }
@@ -96,12 +88,14 @@ body {
     background-color: yellow; }
   .main .main-content .badge {
     color: #000000; }
+  .main .main-content .mt-15 {
+    margin-top: 15px; }
+  .main .main-content .mr-10 {
+    margin-right: 10px; }
   .main .main-content .pointer {
     cursor: pointer; }
   .main .main-content .filter-well {
     background-color: #FFE9B4; }
-  .main .main-content .add-todo {
-    display: none; }
   .main .main-content .to-do .well {
     margin-bottom: 10px; }
   .main .main-content .to-do .todo-head {
@@ -146,8 +140,20 @@ body {
   .main .main-content .new-enq-reg .new-program {
     margin-left: -19px;
     margin-right: -19px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     padding-top: 15px; }
+  .main .main-content .new-enq-reg .lead {
+    margin-bottom: 0;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 1.4;
+    margin-top: 5px; }
+  .main .main-content .new-enq-reg .top-link {
+    border-left: 1px solid #dddddd; }
+  .main .main-content .new-enq-reg .last-link {
+    border-right: 1px solid #dddddd; }
+  .main .main-content .new-enq-reg .active-link a {
+    font-weight: bold; }
   .main .main-content .form-control.hor-first {
     margin: 0; }
   .main .main-content .theme-color {
@@ -185,40 +191,3 @@ body {
 
 .light {
   color: #777777; }
-
-.ui-corner-all {
-  -webkit-border-radius: 0;
-  border-radius: 0; }
-
-.ui-datepicker {
-  width: 15em; }
-  .ui-datepicker .ui-datepicker-month, .ui-datepicker .ui-datepicker-year {
-    width: 50% !important;
-    height: 35px;
-    padding: 6px 6px;
-    font-size: 15px;
-    line-height: 1.428571429;
-    color: #6f6f6f;
-    vertical-align: middle;
-    background-color: #ffffff;
-    background-image: none;
-    border: 1px solid #cccccc;
-    border-radius: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
-  .ui-datepicker .ui-datepicker-month:focus, .ui-datepicker .ui-datepicker-year:focus {
-    border-color: #66afe9;
-    outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
-  .ui-datepicker .ui-datepicker-title {
-    margin: 0 2em; }
-
-.ui-widget {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 0.9em; }
-  .ui-widget select {
-    font-family: inherit;
-    font-size: inherit; }
