--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -19,8 +19,10 @@
 
 <div class="col-xs-3">
   <div class="row">
-    <div class="well well-sm filter-well">
+    <div class="well well-sm filter-well" id= "todo-filter">
       <h4>Filter</h4>
+      <%= link_to "<span class='glyphicon glyphicon-remove'></span>".html_safe,"#",
+                  {onclick: "filterTodosReset();"} %>
       <div class="form-group">
         <%= select_tag :abdc,
                     options_for_select([["-all time-",""],
