sliding scale, single contract form + fetch from contract

--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -68,7 +68,7 @@
                             </div>
                           </div>
 
-                          <%#  <div id="filter_container" class="col-xs-3" ></div> %>
+                          <div class="col-xs-3 filter_container" ></div>
                           <div class="form-group">
                             <%= submit_tag "Search",{class: 'btn btn-primary', onclick: "$('.emails > h3').append('<img class=temp src=/images/icons/sload.gif >');"} %>
                           </div>
