--- a/app/views/institutions/_form_institution_information.html.erb
+++ b/app/views/institutions/_form_institution_information.html.erb
@@ -42,8 +42,8 @@
   <%= bs(f,[:city_id,City.order(:name),
             :id,
             :name,
-            {prompt: "-city-",
-            class: 'cities_select'},{}],
+            {prompt: "-city-"},
+            {class: 'cities_select'}],
             "collection_select",
             [nil,4],7,6) %>
             
