--- a/app/views/institutions/_form_people.html.erb
+++ b/app/views/institutions/_form_people.html.erb
@@ -1,29 +1,19 @@
+<!-- adding people under institution -->
+   <%= f.fields_for :people do |p| %>
+   <hr>
+   <div class="row row-top new-program text-center">
+   
+              <div class="row row-top">
+                <div class="col-xs-offset-11 text-center">
+                  <%= p.link_to_remove ('<span class="glyphicon glyphicon-remove"></span>'.html_safe) %>
+                </div>
+              </div>
+              <% %w(first_name surname mobile email).each do |el| %>
+                <%= bs(p,el,"text_field",[nil,4],7,6) %>
+              <% end %>
+              
+              <%= bs(p,[:desc,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,4],7,6) %>
+   </div>
+   <% end %>
 
- <%= f.fields_for :people do |p| %>
-   <%= p.link_to_remove (image_tag "/images/icons/quit.png", width: "30",class: "fr") %>       
-     <div class="cols boxstheme" style="width:97%">
-      
-       <div class="col6">
-           <%= fs(p,"first_name","text_field",1) %>
-           <%= fs(p,"mobile","text_field",1) %>
-           <div class="frbox">
-                          <%= p.label "Description" %>
-                          <%= p.text_area :desc,{size: "2x3"} %>
-           </div>
-           <div class="cl"> </div>
-           <br/>
-           <br/>
-           <br/>
-       </div>
-       
-       <div class="col6">
-           <%= fs(p,"surname","text_field",1) %>
-           <%= fs(p,"email","text_field",1) %>
-       </div>
-     </div>
-     <div class="cl"></div>
-    <br/>
-  <% end %>
- 
   <%= f.link_to_add "Quick Add", :people,{:class => "btns fl"} %>
-  <%= link_to "Add(with all details)","#" %>
