--- a/app/views/institutions/_form_recruitment_territories.html.erb
+++ b/app/views/institutions/_form_recruitment_territories.html.erb
@@ -1,13 +1,13 @@
-<%= f.fields_for :contracts do |c| %>
+
 
     <% out = prep_pre(c) %>
 
-    <% [[:prohibited_countries,"token_coun_pro"], 
-        [:permitted_countries,"token_coun_per"],
-        [:prohibited_regions,"token_reg_pro"],
-        [:permitted_regions,"token_reg_per"]].each do |el| %>
+    <% [[:prohibited_countries,"token_coun_pro","#aa2222"], 
+        [:permitted_countries,"token_coun_per","#4e9a06"],
+        [:prohibited_regions,"token_reg_pro","#aa2222"],
+        [:permitted_regions,"token_reg_per","#4e9a06"]].each do |el| %>
       <%= bs(c,[el[0],class: el[1],
                 data: { pre: out[("all_" + el[0].to_s).to_sym] } ],"text_field",[nil,4],7,6) %> 
     <% end %>  
 
-<% end %>
+
