--- a/app/views/registrations/_finance.html.erb
+++ b/app/views/registrations/_finance.html.erb
@@ -1,8 +1,7 @@
 <!-- payment partial for a programme fora registration -->
 <div id="all_payments">
-<br/>
-<br/>
 <% @obj.programmes.each do |i| %>
+  
   <% app_name = (i.institution.name rescue "Unknown") %>
   <% app_status = (i.application_status.name rescue "Unknown") %>
   <% eval_status = (app_status.downcase == "joined") %>
@@ -10,12 +9,20 @@
   <% fe_size = fe.nil? ? 0 : 1 %>
   <% comms = fe.commissions rescue nil %>
   
-  <h4><%= app_name %> - <small> <%= app_status %> </small></h4> 
+     <!-- how manieth registration is this for this institution is r_order -->
+    <% r_id = [i.registration.id] %>
+    <% r_ids = i.institution.registrations.map &:id %>
+    <% r_arr = (r_ids - r_id) %>
+    <% r_order = (r_arr).blank? ? 1 : (r_arr.size + 1) %>
+  
+  <h4><%= app_name %> - <small> <%= app_status %> -  [<b><%= r_order.ordinalize %></b> registration]  </small> </h4>
+  
+
 
 
   <% if eval_status %>  
     <% if fe_size > 0 %>
-      <h5>Fee Information</h5>
+
       <table class="table table-striped" border="0" cellpadding="0" cellspacing="0" width="100%">
          <thead>
           <tr>
@@ -26,7 +33,8 @@
                                 <th>Commission Amount</th>
                                 <th>Invoice Date</th>
                                 <th>First Payment Date</th>
-                                <th>&nbsp;</th>
+                                <th></th>
+                                <th></th>
           </tr>
         </thead>
         <tbody>
@@ -45,11 +53,17 @@
                                                                       {remote: true,
                                                                       onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %>
                                     </td>
+                                    <td>
+                  <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, 
+                                fe, 
+                                method: :delete, 
+                                data: { confirm: 'Are you sure?' }  %>
+                                    </td>
                     </tr>
         </tbody>
      </table>
     <% elsif fe_size == 0 %>
-      <%= link_to("Add Fees",new_fee_path(programme_id: i.id), {remote: true}) %>
+      <h5>Fees not updated</h5>
     <% end %>
   <% end %>
     <% if !comms.blank? %>
@@ -81,6 +95,7 @@
         </tbody>
      </table>    
     <% end %>
+<hr>
 <% end %>
 
 
