--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,19 +1,1 @@
-<script type="text/javascript">
-$(function(){
-  $("ul.tab-menus li.new_registration").show();
-  $(".tab-menus li").removeClass("active-tab");
-  $("ul.tab-menus li.new_registration").addClass("active-tab");
-  $("ul.tab-menus li.new_registration").text('Edit - <%= @registration.first_name.titleize %>');
-  $("ul.tab-menus li.new_registration").attr('data-registration_id', '<%= @registration.id %>');
-  $("ul.tab-menus li.new_registration").attr('data-cond', 'edit');
-  $("ul.tab-menus li.new_registration").trigger("click");
-});
-</script>
-
-
-<div class="tab-container">
-  <%= render 'enquiries/tabs', :stat => "ApplicationStatus",:model => "registration"  %>
-  <div class="tab-content" id="edit_id">
-  </div>
-
-</div>
+<%= render 'form' %>
